--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "HR Analysis Dashboard built with React",
   "private": true,
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.35",
     "vite": "^4.5.0"
   },
   "scripts": {
@@ -18,4 +24,3 @@
     "preview": "vite preview"
   }
 }
-
